--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./jest-e2e.config.ts",
+    "test:e2e:watch": "jest --watch --config ./jest-e2e.config.ts",
     "prepare": "husky"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
