--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
-{
-  "version": 2,
-  "builds": [
-    { "src": "dist/main.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "dist/main.js" }
-  ]
-} 
+ {
+      "version": 2,
+      "builds": [
+        {
+          "src": "src/main.js",
+          "use": "@vercel/node"
+        }
+      ],
+      "routes": [
+        {
+          "src": "/(.*)",
+          "dest": "src/main.js",
+          "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+        }
+      ]
+    }
